src/test/resources/valid_tests/MxMnistExample.cnna
architecture MxMnistExample(){
    def input Z(0:255)^{1,28,28} image
    def output Q(0:1)^{10} predictions

    image ->
    Convolution(kernel=(5,5), channels=20) ->
    Tanh() ->
    Pooling(pool_type="max", kernel=(2,2), stride=(2,2)) ->
    Convolution(kernel=(5,5), channels=20) ->
    Tanh() ->
    Pooling(pool_type="max", kernel=(2,2), stride=(2,2)) ->
    FullyConnected(units=1000) ->
    Tanh() ->
    Dropout() ->
    FullyConnected(units=10) ->
    Softmax() ->
    predictions

}